--- a/baboon/index.html
+++ b/baboon/index.html
@@ -14,7 +14,7 @@
         text-align: center;
         width: 100px;
         height: 100px;
-        background-image: url('/images/logo.jpg');
+        background-image: url('images/logo.jpg');
         background-position: center;
         background-size: contain;
         margin: 0 auto;
@@ -31,6 +31,6 @@
       <div id="app">
       </div>
     </div>
-    <script src="/dist/build.js"></script>
+    <script src="dist/build.js"></script>
   </body>
 </html>
